# FoxOSC

./: .gitattributes  Cargo.toml  LICENSE  README.md  build.sh
plugins/boop-counter-plugin/: Cargo.toml
plugins/boop-counter-plugin/src/: lib.rs
plugins/watch-plugin/: Cargo.toml
plugins/watch-plugin/src/: lib.rs
src/: config.rs  console.rs  lib.rs  main.rs  osc_manager.rs  plugin_api.rs  wasm_loader.rs
src/ui/: mod.rs
