[package]
name = "fox-osc"
edition = "2021"

[dependencies]
# OSC communication
rosc = "0.10"

# GUI framework
gtk4 = { version = "0.9", features = [] }
libadwaita = { version = "0.7", features = ["v1_6"] }
gio = "0.20"
glib = "0.20"

# WebAssembly runtime
wasmtime = "27.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time handling
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Threading
parking_lot = "0.12"

# Directories
dirs = "5.0"

[lib]
name = "osc_app_core"
path = "src/lib.rs"

[[bin]]
name = "fox-osc"
path = "src/main.rs"

# Workspace for plugin development
[workspace]
members = ["plugins/*"]